sass/blocks/features.scss
.features {
  padding-top: 41px;
}

.features__desc {
  position: relative;
}

.features__desc p {
  width: 280px;
  margin: 0 auto;
  padding-bottom: 27px;
  font-family: $font-light;
  color: #283645;
  text-align: center;
  font-size: 24px;
  line-height: 29px;
}

.features__desc::after {
  content: "";
  position: absolute;
  bottom: -47px;
  left: 0px;
  width: 100%;
  height: 48px;
  background: url("../img/bg-triangle-white.svg") no-repeat center;
}

.features__wrap {
  margin: 0px;
  padding: 0px;
  list-style: none;
  background-color: #f2f2f2;
}

.features__item {
  position: relative;
  margin: 0px;
  width: 280px;
  padding-top: 29px;
  margin: 0 auto;
  font-size: 14px;
  line-height: 24px;
  font-family: $font-plain;
  text-align: center;
  b {
    display: block;
    padding-bottom: 8px;
    font-size: 19px;
    line-height: 30px;
  }

  &--mood {
    padding-top: 84px;
  }

  &--friends {
    padding-bottom: 318px;
    width: 250px;
  }

  &--friends::after {
    content: "";
    position: absolute;
    bottom: -42px;
    left: 50%;
    margin-left: -78px;
    width: 157px;
    height: 320px;
    background-image: url("../img/iphone-screen-mobile@1x.png");
    background-size: contain;
    z-index: 1;
  }
}

@media(min-width:$mobile) and (min-resolution:$retina-dpi) and (min-resolution:$retina-ppx) {
  .features__item--friends::after {
    background-image: url("../img/iphone-screen-mobile@2x.png")
  }
}

@media(min-width:$tablet) {
  .features {
    padding-top: 53px;
  }

  .features__desc {
    margin: 0px;
    padding-bottom: 43px;
    p {
      width: auto;
      padding-bottom: 4px;
      font-size: 40px;
      line-height: 42px;
    }
    p:last-child {
      width: 335px;
      line-height: 46px;
    }
  }

  .features__list {
    padding-right: 20px;
  }

  .features__item {
    width:  332px;
    margin: 0px;
    margin-left: auto;
    padding-bottom: 3px;
    padding-right: 20px;
    text-align: left;

    &--mood {
      padding-top: 75px;
    }

    &--friends {
      font-size: 14px;
      line-height: 24px;
      padding-top: 30px;
      padding-bottom: 42px;
    }

    &--friends::after {
      bottom: -2px;
      left: -230px;
      width: 269px;
      height: 482px;
      z-index: 1;
      background-image: url(".../img/iphone-screen-mobile@1x.png");
      background-size: cover;
    }
  }
}

@media(min-width:$tablet) and (min-resolution:$retina-dpi) and (min-resolution:$retina-ppx) {
  .features__item--friends::after {
    background-image: url("../img/iphone-screen-mobile@1x.png")
  }
}

@media(min-width:$desktop) {
  .features {
    padding-top: 68px;
  }

  .features__desc p {
    font-size: 50px;
    line-height: 59px;
    padding-bottom: 0px;
  }

  .features__desc p:last-child {
    width: 420px;
    padding-bottom: 78px;
    line-height: 59px;
    &::after {
      left: -390px;
      bottom: -128px;
      width: 1191px;
      height: 161px;
    }
  }

  .features__wrap {
    display: flex;
    justify-content: space-between;
    padding: 0 162px;
    padding-top: 313px;
  }

  .features__item {
    width: 238px;
    margin-left: 0px;
    padding-top: 0px;
    padding-right: 0px;
    font-size: 18px;
    line-height: 30px;
    text-align: center;
    b {
      font-size: 30px;
      line-height: 30px;
      padding-bottom: 24px;
    }

    &--mood::after {
      content: "";
      position: absolute;
      bottom: 178px;
      left: -29px;
      width: 294px;
      height: 550px;
      background: url("../img/iphone-screen-1-desktop@1x.png") center no-repeat;
      background-size: contain;
    }

    &--world::after {
      content: "";
      position: absolute;
      bottom: 177px;
      left: -25px;
      width: 294px;
      height: 550px;
      background: url("../img/iphone-screen-2-desktop@1x.png") center no-repeat;
      background-size: contain;
    }

    &--friends::after {
      content: "";
      bottom: 177px;
      left: 54px;
      width: 294px;
      height: 550px;
      background: url("../img/iphone-screen-3-desktop@1x.png") center no-repeat;
      background-size: contain;
    }
    &--friends b {
      width: 210px;
      margin: 0 auto;
    }
  }
}

@media(min-width:$desktop) and (min-resolution:$retina-dpi) and (min-resolution:$retina-ppx)  {
  .features__item--mood::after {
    background-image: url(../img/iphone-screen-1-desktop@2x.png);
  }

  .features__item--world::after {
    background-image: url(../img/iphone-screen-2-desktop@2x.png);
  }

  .features__item--friends::after {
    background-image: url(../img/iphone-screen-3-desktop@2x.png);
  }
}

